--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "winston": "^3.13.0"
   }
 }
