--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/.env
-/node_modules
-/package-lock.json
+# Ignore .env files in Frontend and Backend directories
+/Frontend/.env
+/Backend/.env
+
+# Ignore node_modules directories in Frontend and Backend directories
+/Frontend/node_modules/
+/Backend/node_modules/
+
+# Ignore package-lock.json files in Frontend and Backend directories
+/Frontend/package-lock.json
+/Backend/package-lock.json
