--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
-    "vue": "^3.2.37",
+    "vue": "^3.4.21",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@vitejs/plugin-vue": "^3.1.0",
+    "@types/node": "^20.14.2",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vue-tsc": "^2.0.6"
   }
 }
