--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,10 +2,18 @@
   "name": "restapi",
   "version": "1.0.0",
   "description": "",
-  "main": "serve.js",
+  "main": "src/serve.ts",
   "scripts": {
     "start": "nodemon --exec ts-node src/serve.ts",
+    "start-build": "nodemon ./build/src/serve.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run clean && npm run compile-ts",
+    "cbs": "npm run build && npm run start",
+    "dev": "npm run clean && npm run compile-ts-watch-mode & npm run start",
+    "clean": "rm -rf build",
+    "compile-ts": "tsc --project ./",
+    "compile-ts-watch-mode": "tsc -w --project ./",
+    "lint": "eslint . --ext .ts",
     "create-migration": "npx knex migrate:make",
     "migrate-up": "npx knex migrate:latest",
     "migrate-down": "npx knex migrate:rollback"
