--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -54,7 +54,7 @@
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     "outDir": "./build",                                   /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
-    "noEmit": true,                                   /* Disable emitting files from a compilation. */
+    "noEmit": false,                                   /* Disable emitting files from a compilation. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -102,15 +102,13 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "allowImportingTsExtensions": true  // Enable importing TypeScript files without extension
+    // "allowImportingTsExtensions": true  // Enable importing TypeScript files without extension
 
   },
   "include": ["src", "package.json", "tests", "lib", "migrations"],
   "exclude": [
     "node_modules/**/*",
-    "scripts/**/*",
-    "build/**/*",
-    "postman/**/*"
+    "build/**/*"
   ]
 
 }
