--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-# Ignore .env files in Frontend and Backend directories
+# Ignore .env files in Frontend and backend directories
 /Frontend/.env
-/Backend/.env
+/backend/.env
 
-# Ignore node_modules directories in Frontend and Backend directories
+# Ignore node_modules directories in Frontend and backend directories
 /Frontend/node_modules/
-/Backend/node_modules/
+/backend/node_modules/
 
-# Ignore package-lock.json files in Frontend and Backend directories
+# Ignore package-lock.json files in Frontend and backend directories
 /Frontend/package-lock.json
-/Backend/package-lock.json
+/backend/package-lock.json
+
+
+/backend/build
